node-main/deps/v8/test/message/fail/try-catch-lexical-conflict-preparser.out
*%(basename)s:8: SyntaxError: Identifier 'x' has already been declared
    let x
        ^
SyntaxError: Identifier 'x' has already been declared
